sandc/test/fixtures/pbtRegression/shouldSucceed/args/Args.sand
pub class Args {
    pub arg(a: int, b: String): String {
        b.substring(a)
    }
}