sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowing/instanceProp/InstanceProp.sand
pub class InstanceProp {
    sand: int;
}